2012-06-27  Pablo Flouret  <pablof@motorola.com>

        pattern="" should only accept the empty string
        https://bugs.webkit.org/show_bug.cgi?id=89569

        Reviewed by Kent Tamura.

        An empty pattern attribute was being treated essentially as if the
        pattern wasn't present.

        No new tests. Covered by existing tests (plus a modified one).

        * html/BaseTextInputType.cpp:
        (WebCore::BaseTextInputType::patternMismatch):
            Check if the pattern attribute is present. If it is then use the
            pattern as is (in the particular case of this bug, an empty pattern
            will only match an empty value).

2012-06-27  James Robinson  <jamesr@chromium.org>

        [chromium] Use SkColor in compositor internals
        https://bugs.webkit.org/show_bug.cgi?id=90108

        Reviewed by Adrienne Walker.

        As the title says, cutting dependencies. If we support color spaces in the compositor we will probably need to
        use a more sophisticated type, but for our current use SkColor is sufficient and matches our API better.

        * platform/graphics/chromium/LayerChromium.cpp:
        (WebCore::LayerChromium::LayerChromium):
        (WebCore::LayerChromium::setBackgroundColor):
        (WebCore::LayerChromium::setDebugBorderColor):
        * platform/graphics/chromium/LayerChromium.h:
        (LayerChromium):
        (WebCore::LayerChromium::backgroundColor):
        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::drawDebugBorderQuad):
        (WebCore::LayerRendererChromium::drawSolidColorQuad):
        * platform/graphics/chromium/cc/CCDebugBorderDrawQuad.cpp:
        (WebCore::CCDebugBorderDrawQuad::create):
        (WebCore::CCDebugBorderDrawQuad::CCDebugBorderDrawQuad):
        * platform/graphics/chromium/cc/CCDebugBorderDrawQuad.h:
        (CCDebugBorderDrawQuad):
        (WebCore::CCDebugBorderDrawQuad::color):